--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   http: ^0.13.4
   binder: ^0.4.0
+  cached_network_image: ^3.1.0
 
   flutter:
     sdk: flutter
@@ -41,6 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
@@ -58,7 +60,10 @@ dev_dependencies:
 flutter:
   assets:
     - images/
-
+  fonts:
+    - family: NetflixFont
+      fonts:
+        - asset: ./fontes/BebasNeue.otf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
